--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,12 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "TreeCrypt"
-version = "1.0.0"
+version = "1.1.0"
 description = "A node-tree based encryption algorithm."
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 license = { file = "LICENSE" }
-keywords = ["encryption", "trees", "visualization", "cryptography"]
+keywords = ["encryption", "node-trees", "cryptography", "cybersecurity"]
 authors = [
   { name = "MUmarShahbaz", email = "m.umarshahbaz.2007@gmail.com" }
 ]
@@ -20,17 +20,10 @@ classifiers = [
   "Development Status :: 6 - Mature",
   "Intended Audience :: Developers",
   "License :: OSI Approved :: MIT License",
-  "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.8",
-  "Programming Language :: Python :: 3.9",
-  "Programming Language :: Python :: 3.10",
-  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python",
   "Topic :: Security :: Cryptography",
   "Topic :: Software Development :: Libraries :: Python Modules",
   "Operating System :: OS Independent"
-]
-dependencies = [
-  "matplotlib>=3.0"
 ]
 
 [project.urls]
